# CivitScraper

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CLAUDE.md  CONFIGURATION.md  LICENSE  MANIFEST.in  README.md  civitscraper-dev.bat  civitscraper-dev.sh  civitscraper.bat  civitscraper.sh  mypy.ini  project_overview-DEV.md  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  setup.py
civitscaper/: cli.py
civitscaper/api/: __init__.py  client.py  request.py
civitscaper/config/: loader.py
civitscaper/html/: __init__.py  generator.py
civitscaper/jobs/: executor.py  templates.py
civitscaper/organization/: config.py  models.py  operations.py  organizer.py  path_formatter.py
civitscaper/scanner/: __init__.py  batch_processor.py  discovery.py  html_manager.py  image_manager.py  metadata_manager.py  processor.py
civitscaper/utils/: hash.py
civitscraper/: __init__.py  cli.py
civitscraper/api/: __init__.py  base_client.py  circuit_breaker.py  client.py  exceptions.py  models.py  rate_limiter.py  request.py  response.py
civitscraper/config/: __init__.py  loader.py
civitscraper/html/: context.py  generator.py  images.py  paths.py  renderer.py  sanitizer.py
civitscraper/jobs/: __init__.py  executor.py  templates.py
civitscraper/organization/: __init__.py  config.py  models.py  (+3 more)
config/: default.yaml.example  default.yaml.minimal
docs/: best-practices.md  configuration.md  html-generator.md  organization.md  scanning.md  trigger-sync.md
scripts/: setup_dev_env.bat  setup_dev_env.sh
tests/: conftest.py  test_cli.py
(+43 files in other folders)
